--- a/lib/calendar7_web/live/event_live/form_component.html.leex
+++ b/lib/calendar7_web/live/event_live/form_component.html.leex
@@ -1,22 +1,152 @@
-<h2><%= @title %></h2>
+<h2 class="text-teal-700 text-lg font-bold pb-4"><%= @title %></h2>
 
 <%= f = form_for @changeset, "#",
   id: "event-form",
+  class: "w-full",
   phx_target: @myself,
   phx_change: "validate",
   phx_submit: "save" %>
 
-  <%= label f, :description %>
-  <%= text_input f, :description %>
-  <%= error_tag f, :description %>
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full px-3">
+      <%= label f, :description, class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+      <%= text_input f, :description, class: "appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
+      <p class="text-red-500 text-xs italic"><%= error_tag f, :description %></p>
+    </div>
+  </div>
 
-  <%= label f, :starts_at %>
-  <%= datetime_select f, :starts_at, year: [options: 2020..2025], default: today(@date) %>
-  <%= error_tag f, :starts_at %>
+  <% datetime_class= "block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
+  <%= datetime_select f, :starts_at, default: today(@date), builder: fn b -> %>
+    <%= label f, :starts_at, class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Year
+        </label>
+        <div class="relative">
+          <%= b.(:year, [options: 2020..2025, class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
 
-  <%= label f, :ends_at %>
-  <%= datetime_select f, :ends_at, year: [options: 2020..2025], default: tomorrow(@date) %>
-  <%= error_tag f, :ends_at %>
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Month
+        </label>
+        <div class="relative">
+          <%= b.(:month, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
 
-  <%= submit "Save", phx_disable_with: "Saving..." %>
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Day
+        </label>
+        <div class="relative">
+          <%= b.(:day, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Hour
+        </label>
+        <div class="relative">
+          <%= b.(:hour, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Minute
+        </label>
+        <div class="relative">
+          <%= b.(:minute, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+  <%= datetime_select f, :ends_at, default: tomorrow(@date), builder: fn b -> %>
+    <%= label f, :ends_at, class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Year
+        </label>
+        <div class="relative">
+          <%= b.(:year, [options: 2020..2025, class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Month
+        </label>
+        <div class="relative">
+          <%= b.(:month, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Day
+        </label>
+        <div class="relative">
+          <%= b.(:day, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Hour
+        </label>
+        <div class="relative">
+          <%= b.(:hour, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/5 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs mb-2" for="grid-state">
+          Minute
+        </label>
+        <div class="relative">
+          <%= b.(:minute, [class: datetime_class]) %>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+  <p class="text-red-500 text-xs italic"><%= error_tag f, :ends_at %></p>
+
+  <%= submit "Save", phx_disable_with: "Saving...", class: "bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded mt-2" %>
 </form>
