--- a/lib/calendar7_web/templates/pow/session/new.html.eex
+++ b/lib/calendar7_web/templates/pow/session/new.html.eex
@@ -1,4 +1,4 @@
-<div class="w-full max-w-xs py-8">
+<div class="w-full max-w-xs pt-8">
   <%= form_for @changeset, @action, [as: :user, class: "bg-white shadow-md rounded-lg px-8 pt-6 pb-8 mb-4"], fn f -> %>
     <%= if @changeset.action do %>
       <div class="alert alert-danger">
