--- a/lib/calendar7_web/live/event_live/show.html.leex
+++ b/lib/calendar7_web/live/event_live/show.html.leex
@@ -31,5 +31,5 @@
       <% end %>
     </span>
   </p>
-  <p class="text-gray-800 border-l-4 px-4 my-4 max-w-lg <%= if @has_joined?, do: 'border-pink-500' %>"><%= @event.description %></p>
+  <p class="whitespace-pre-line text-gray-800 border-l-4 px-4 my-4 max-w-lg <%= if @has_joined?, do: 'border-pink-500' %>"><%= @event.description %></p>
 </div>
